[project]
name = "vktoken"
version = "2.2.0"
description = "Tool for getting VK access token"
authors = [
    {name = "jieggii", email = "jieggii@protonmail.com"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
homepage = "https://github.com/jieggii/vktoken"
repository = "https://github.com/jieggii/vktoken"
keywords = [
        "vk",
        "vkontakte",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
